--- a/SCSS/layout/_grid.scss
+++ b/SCSS/layout/_grid.scss
@@ -9,6 +9,8 @@ $columns: 12;
 
 @for $width from 1 through $columns {
 	.col-#{$width} {
-		flex-basis: $width / $columns * 100%;
+		// flex-basis: ($width / $columns) * 100%;
+		// flex-basis: percentage($width / $columns);
+		flex-basis: floor(($width / $columns) * 100%);
 	}  
 }
