--- a/SCSS/utils/_variables.scss
+++ b/SCSS/utils/_variables.scss
@@ -1,10 +1,12 @@
 $basic_unit: 16px;
 $color-primary: #6C51E2;
 $color-secondary: #F1F0F8;
-$color-tertiary: #00000099;
-$color-basic-b: #000000DE;
+$color-tertiary: rgba(0, 0, 0, 0.6);
+$color-basic-b: rgba(0, 0, 0, 0.87);
 $color-basic-w: #fff;
-$color-basic-w-light: #FFFFFF98;
-
-// 
+$color-basic-w-light: rgba(255, 255, 255, 0.6);
 $primary-font: 'Raleway';
+
+// $color-tertiary: #00000099;
+// $color-basic-b: #000000DE;
+// $color-basic-w-light: #FFFFFF98;
