--- a/SCSS/base/_base.scss
+++ b/SCSS/base/_base.scss
@@ -1,15 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway&display=swap');
 
-// *{
-//     box-sizing: border-box;
-// }
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
 
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Microsoft JhengHei", Roboto, "Helvetica Neue", Arial, sans-serif;
     font-family: 'Open Sans';
     line-height: 1.5;
-    box-sizing: border-box;
     color: #00000099;
 }
 
@@ -19,5 +20,12 @@ h1, h2, h3, h4 ,h5, h6 {
 }
 
 a {
+    text-decoration: none;
     color: #00000099;
+}
+
+img {
+	display: block;
+	max-width: 100%;
+	height: auto;
 }
