--- a/SCSS/components/_card.scss
+++ b/SCSS/components/_card.scss
@@ -8,3 +8,16 @@
         object-fit: cover;
     }
 }
+
+// .card-dec {
+//     width: 100%;
+// }
+
+// .card-dec> p {
+//     display: -webkit-box;
+//     overflow: hidden;
+//     white-space: nowrap;
+//     text-overflow: ellipsis;
+//     -webkit-line-clamp: 2;
+//     -webkit-box-orient: vertical;
+// }
