--- a/SCSS/utils/_utilities.scss
+++ b/SCSS/utils/_utilities.scss
@@ -67,7 +67,11 @@
     // 72
     padding-bottom: $basic_unit*4.5;
 }
-
+// pr --- padding-right
+.pr-sm {
+    // 30
+    padding-right: $basic_unit*1.875;
+}
 
 
 .d-flex {
