--- a/SCSS/aloha.scss
+++ b/SCSS/aloha.scss
@@ -38,6 +38,18 @@
     }
 }
 
+.top-tab {
+    color: $color-secondary;
+    border-bottom: 2px solid $color-secondary;
+    // width: 400px;
+    // border-bottom: 2px solid $color-secondary;
+}
+.top-tab-active {
+    color: $color-primary;
+    border-bottom: 2px solid $color-primary;
+}
+
+
 .card {
     position: relative;
     .pop-img {
