--- a/SCSS/utils/_utilities.scss
+++ b/SCSS/utils/_utilities.scss
@@ -66,12 +66,27 @@
     margin-bottom: $basic_unit*4.5;
 }
 
+
+// pt --- padding-top
+.pt-xs {
+    // 24
+    padding-top: $basic_unit*1.5;
+}
+
 // pb --- padding-bottom
+.pb-xs {
+    // 24
+    padding-bottom: $basic_unit*1.5;
+}
 .pb-lg {
     // 72
     padding-bottom: $basic_unit*4.5;
 }
 // pr --- padding-right
+.pr-xs {
+    // 24
+    padding-right: $basic_unit*1.5;
+}
 .pr-1 {
     padding-right: $basic_unit;
 }
@@ -82,6 +97,7 @@
 .pr-m {
     padding-right: $basic_unit*3;
 }
+// pr --- padding-light
 .pl-xs {
     // 24
     padding-left: $basic_unit*1.5;
