--- a/SCSS/utils/_utilities.scss
+++ b/SCSS/utils/_utilities.scss
@@ -143,6 +143,9 @@
 .ai-center {
     align-items: center;
 }
+.ai-flex-end {
+    align-items: flex-end;
+}
 .ta-center {
     text-align: center;
 }
