--- a/SCSS/pages/_result.scss
+++ b/SCSS/pages/_result.scss
@@ -7,6 +7,10 @@
 //     padding: 0 15px;
 // }
 
+.mr-37 {
+    margin-right: 37px;
+}
+
 .search-box {
     width: 30%;
 }
@@ -15,8 +19,12 @@
     border-radius: 8px;
 }
 
-.result-b {
+.result-b-btm-w {
     border-bottom: 1.5px solid $color-basic-w;
+}
+
+.result-b-btm-sec {
+    border-bottom: 1.5px solid $color-secondary;
 }
 
 .result-filter-item {
@@ -41,15 +49,50 @@
 
 
 .result-card {
-    height: 175px;
+    height: 200px;
     .result-card-img {
         width: 35%;
-        height: 100%;
         overflow: hidden;
+        border-radius: 8px 0px 0px 8px;
         img {
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
     }
+    .result-card-info {
+        width: 65%;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        padding-left: 1rem;
+    }
+    .result-card-tag {
+        padding: 4px 8px;
+        margin-right: 4px;
+        color: $color-tertiary;
+        border-radius: 12px;
+        background-color: $color-secondary;
+    }
+}
+
+.pagination-bar {
+    padding: 1rem;
+    .pagination {
+        width: 38px;
+        height: 38px;
+        font-weight: bold;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: $color-basic-b;
+        border-radius: 3px;
+    }
+    .pagination-active {
+        background-color: #fff;
+    }
+}
+
+.sub {
+    padding: 32px 0;
+    height: 104px;
 }
