--- a/SCSS/pages/_detail.scss
+++ b/SCSS/pages/_detail.scss
@@ -16,3 +16,27 @@
 .gallery-s {
     height: 151px;
 }
+
+.select-tab {
+    font-size: 14px;
+    padding: 8px 16px;
+    border-radius: 4px;
+    background-color: $color-secondary;
+}
+
+.type-list {
+    height: 200px;
+    .type-list-img{
+        width: 35%;
+        overflow: hidden;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+    .type-list-info {
+        width: 65%;
+        padding: 8px 16px;
+    }
+}
