--- a/SCSS/utils/_utilities.scss
+++ b/SCSS/utils/_utilities.scss
@@ -25,7 +25,9 @@
 .fw-bold {
     font-weight: bold;
 }
-
+.ml-1 {
+    margin-left: $basic_unit !important;
+}
 .ml-xs {
     margin-left: $basic_unit*1.5;
 }
@@ -107,10 +109,13 @@
 .pr-m {
     padding-right: $basic_unit*3;
 }
-// pr --- padding-light
+// pl --- padding-light
 .pl-xs {
     // 24
     padding-left: $basic_unit*1.5;
+}
+.pl-1 {
+    padding-left: $basic_unit !important;
 }
 
 
