--- a/SCSS/components/_button.scss
+++ b/SCSS/components/_button.scss
@@ -2,6 +2,8 @@
     border-radius: 4px;
     font-weight: bold;
     text-transform: uppercase;
+    cursor: pointer;
+    transition: .2s;
 }
 
 // btn-small
@@ -20,12 +22,19 @@
     color: $color-basic-w;
     background-color: $color-primary;
     border: none;
+    &:hover {
+        background-color: darken($color-primary, 5);
+    }
 }
 
 .btn-secondary {
     color: $color-primary;
     background-color: $color-basic-w;
     border: 1px solid $color-primary;
+    &:hover {
+        color: $color-basic-w;
+        background-color: darken($color-primary, 2);
+    }
 }
 
 .btn-bg-b {
