--- a/SCSS/pages/_index.scss
+++ b/SCSS/pages/_index.scss
@@ -17,11 +17,10 @@
     }
 }
 
+
 .top-tab {
     color: $color-secondary;
     border-bottom: 2px solid $color-secondary;
-    // width: 400px;
-    // border-bottom: 2px solid $color-secondary;
 }
 .top-tab-active {
     border-bottom: 2px solid $color-primary;
@@ -29,6 +28,19 @@
         color: $color-primary;
     }
 }
+
+.choices-card {
+    .card-img-wrap {
+        height: 175px;
+        overflow: hidden;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
+
 
 
 .card {
