--- a/SCSS/pages/_index.scss
+++ b/SCSS/pages/_index.scss
@@ -25,6 +25,7 @@
     border-bottom: 2px solid $color-secondary;
 }
 .top-tab-active {
+    color: $color-primary;
     border-bottom: 2px solid $color-primary;
     a {
         color: $color-primary;
