result-card hover, checkbox:checked, add budget block

--- a/SCSS/aloha.all.scss
+++ b/SCSS/aloha.all.scss
@@ -27,7 +27,7 @@
 
 
 *{
-    outline: 1px solid salmon;
+    // outline: 1px solid olivedrab;
 }
 
 .seb-tit {
@@ -40,4 +40,8 @@
 .result-main {
     position: absolute;
     left: 0;
+}
+
+.mr-4 {
+    margin-right: 4px !important;
 }
