--- a/SCSS/pages/_result.scss
+++ b/SCSS/pages/_result.scss
@@ -18,6 +18,9 @@
 .mr-37 {
     margin-right: 37px;
 }
+.pt-10 {
+    padding-top: 10px;
+}
 
 .fillet-8 {
     border-radius: 8px;
@@ -33,7 +36,7 @@
 
 .result-filter-item {
     position: relative;
-    input {
+    input[type=checkbox] {
         opacity: 0;
     }
     input[type=checkbox] + label:before {
@@ -48,6 +51,11 @@
         left: 0;
         background-color: transparent;
         margin-top: 0.15rem;
+    }
+    input[type=checkbox]:checked + label:before {
+        background-color: $color-primary;
+        border: 1.5px solid $color-primary;
+
     }
 }
 
@@ -66,9 +74,11 @@
     }
     .result-card-info {
         width: 65%;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        padding-left: 1rem;
+        padding: 1rem;
+        border-radius: 0px 8px 8px 0px;
+        &:hover {
+            box-shadow: 3px 3px 5px $color-secondary;
+        }
     }
     .result-card-tag {
         padding: 4px 8px;
@@ -109,4 +119,11 @@
 
 .result-tab-active {
     color: $color-primary;
+}
+
+.price-box {
+    width: 45%;
+    padding: 8px;
+    background-color: #fff;
+    border-radius: 4px;
 }
