--- a/SCSS/components/_navbar.scss
+++ b/SCSS/components/_navbar.scss
@@ -9,6 +9,8 @@
         cursor: pointer;
     }
     a {
+        width: 100%;
+        height: 100%;
         &:hover {
             color: $color-primary;
         }
@@ -16,13 +18,15 @@
 }
 
 .logo {
-    width: 96px;
-    height: 24px;
-    text-indent: 101%;
-    white-space: nowrap;
-    overflow: hidden;
-    background: url(../img/logo-aloha.svg) no-repeat;
-    cursor: pointer;
+    a {
+        width: 96px;
+        height: 24px;
+        background: url(../img/logo-aloha.svg) no-repeat;
+        display: block;
+        text-indent: 101%;
+        white-space: nowrap;
+        overflow: hidden;
+    }
 }
 
 .drop-list {
