--- a/SCSS/pages/_result.scss
+++ b/SCSS/pages/_result.scss
@@ -121,6 +121,26 @@
     color: $color-primary;
 }
 
+.budget-block {
+    .price-rangeSlider {
+        position: relative;
+        width: 100%;
+        height: 2px;
+        background-color: $color-primary;
+        &::before {
+            content: '';
+            width: 16px;
+            height: 16px;
+            border-radius: 50%;
+            background-color: $color-primary;
+            position: absolute;
+            top: 0;
+            left: 0;
+    
+        }
+    }
+}
+
 .price-box {
     width: 45%;
     padding: 8px;
