--- a/SCSS/components/_navbar.scss
+++ b/SCSS/components/_navbar.scss
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    min-width: 100%;
+    right: 0;
     z-index: 10;
     background: $color-basic-w;
     li {
