index table rwd

--- a/SCSS/aloha.all.scss
+++ b/SCSS/aloha.all.scss
@@ -14,6 +14,7 @@
 
 @import "./utils/variables";
 @import "./utils/utilities";
+@import "./utils/screenSet";
 
 @import "./components/navbar";
 @import "./components/card";
