--- a/SCSS/pages/_index.scss
+++ b/SCSS/pages/_index.scss
@@ -115,3 +115,34 @@
         cursor: pointer;
     }
 }
+
+
+
+// -------- RWD --------
+.header {
+    @include screen-md {
+        margin-bottom: 312px;
+    }
+    .index-search-bar {
+        @include screen-md{
+            max-width: 75%;
+            flex-direction: column;
+            bottom: -230px;
+        }
+        .index-search-bar-list {
+            @include screen-md{
+                flex-direction: column;
+            }
+        }
+        li {
+            @include screen-md{
+                margin-bottom: 16px;
+            }
+        }
+    }
+}
+.ins-img {
+    @include screen-md{
+        height: 158px;
+    }
+}
