--- a/SCSS/utils/_screenSet.scss
+++ b/SCSS/utils/_screenSet.scss
@@ -1,19 +1,19 @@
-@mixin screen-lg() {
+@mixin screen-lg {
     @media all and (max-width:1200px) {
         @content;
     }
 }
-@mixin screen-md() {
-    @media all and (max-width:767px) {
+@mixin screen-md {
+    @media all and (max-width:768px) {
         @content;
     }
 }
-@mixin screen-sm() {
+@mixin screen-sm {
     @media all and (max-width:578px) {
         @content;
     }
 }
-@mixin screen-xs() {
+@mixin screen-xs {
     @media all and (max-width:320px) {
         @content;
     }
