--- a/SCSS/components/_button.scss
+++ b/SCSS/components/_button.scss
@@ -29,7 +29,7 @@
 
 .btn-secondary {
     color: $color-primary;
-    background-color: $color-secondary;
+    background-color: #fff;
     border: 1px solid $color-primary;
     &:hover {
         color: $color-basic-w;
