result table rwd

--- a/SCSS/aloha.all.scss
+++ b/SCSS/aloha.all.scss
@@ -17,6 +17,7 @@
 @import "./utils/screenSet";
 
 @import "./components/navbar";
+@import "./components/sub";
 @import "./components/card";
 @import "./components/button";
 @import "./components/input";
