result table budget-price-mob rwd

--- a/SCSS/pages/_result.scss
+++ b/SCSS/pages/_result.scss
@@ -155,7 +155,18 @@
         margin-bottom: 8px !important;
     }
 }
-
+.budget-price {
+    @include screen-md{
+        display: none !important;
+    }
+}
+.budget-price-mob {
+    padding: 8px;
+    display: none;
+    @include screen-md{
+        display: flex !important;
+    }
+}
 
 .result-input-w {
     @include screen-md {
@@ -180,6 +191,7 @@
         display: flex !important;
     }
 }
+
 
 
 .result-list {
