result mob result-aside-mob, index-search-bar-mob rwd

--- a/SCSS/pages/_result.scss
+++ b/SCSS/pages/_result.scss
@@ -311,3 +311,17 @@
     }
 }
 
+.index-search-bar-mob {
+    .result-input-mob {
+        width: 100px;
+        font-size: 12px;
+        text-align: center;
+    }
+}
+
+.result-aside-mob {
+    display: none;
+    @include screen-sm {
+        display: flex;
+    }
+}
