--- a/SCSS/utils/_utilities.scss
+++ b/SCSS/utils/_utilities.scss
@@ -57,7 +57,11 @@
 
 .mt-tiny {
     margin-top: $basic_unit*0.5; 
- }
+}
+.mt-1 {
+    // 16
+    margin-top: $basic_unit !important;
+}
 .mt-xs {
     // 24
     margin-top: $basic_unit*1.5;
