detail table rwd

--- a/SCSS/aloha.all.scss
+++ b/SCSS/aloha.all.scss
@@ -28,9 +28,9 @@
 @import "./pages/detail";
 
 
-// *{
-//     outline: 1px solid olivedrab;
-// }
+*{
+    outline: 1px solid lightslategrey;
+}
 
 .seb-tit {
     font-family: 'Raleway';
