--- a/SCSS/pages/_detail.scss
+++ b/SCSS/pages/_detail.scss
@@ -47,13 +47,15 @@
     .type-list-info {
         width: 65%;
         padding: 8px 16px;
+        @include screen-sm {
+            padding: 12px;
+        }
     }
 }
 
 
 .room-fea-list {
     @include screen-md {
-        // flex-wrap: nowrap;
         align-items: center;
         li {
             width: 15%;
@@ -96,11 +98,33 @@
 
 .result-room-type {
     padding-right: 8px;
+    @include screen-sm {
+        display: none !important;
+    }
 }
 
 .result-room-info-top {
     @include screen-sm {
         align-items: flex-start;
         flex-direction: column;
+    }
+}
+
+.type-list-mob {
+    border-radius: 4px;
+    .type-list-mob-img {
+        width: 150px;
+        height: 150px;
+        overflow: hidden;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+    .type-list-mob-info {
+        display: flex;
+        flex-direction: column;
+        padding: 8px;
     }
 }
