result-room-type-mob display none

--- a/SCSS/pages/_detail.scss
+++ b/SCSS/pages/_detail.scss
@@ -140,3 +140,10 @@
         display: block;
     }
 }
+
+.result-room-type-mob {
+    display: none;
+    @include screen-sm {
+        display: block;
+    }
+}
